@@ -17,8 +17,10 @@ apport (0.82) UNRELEASED; urgency=low
   * apport/packaging.py: Add interface get_available_version(package).
   * backends/packaging-apt-dpkg.py: Implement get_available_version(), add
     shallow test case.
+  * apport/report.py: Add function obsolete_packages() to return packages in
+    Package: and Depends: which are not up to date. Add test cases.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 31 May 2007 15:55:22 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 31 May 2007 17:00:18 +0200
 
 apport (0.81) gutsy; urgency=low
 
